--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "author": "Randy Merrill <Zoramite+github@gmail.com> (http://forthedeveloper.com)",
-  "name": "less-middleware",
+  "name": "less4-middleware",
   "description": "LESS.js middleware for connect.",
-  "version": "3.1.0",
+  "version": "4.1.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/emberfeather/less.js-middleware.git"
+    "url": "git://github.com/reif-websites/less.js-middleware.git"
   },
   "main": "lib/middleware.js",
   "dependencies": {
-    "less": "~3.12.0",
-    "mkdirp": "~0.5.1",
+    "less": "~4.1.0",
+    "mkdirp": "~1.0.4",
     "node.extend": "~2.0.2"
   },
   "devDependencies": {
-    "express": "~4.16.3",
-    "fs-extra": "~6.0.1",
-    "mocha": "~5.2.0",
-    "supertest": "~3.1.0"
+    "express": "~4.17.1",
+    "fs-extra": "~9.0.1",
+    "mocha": "~8.2.1",
+    "supertest": "~6.0.1"
   },
   "engines": {
     "node": ">=4"
